計算式空白なし可 文字化け対応 編集ウィンドウのポジション記憶

--- a/PortFolion/PortFolion/EditComponent/AccountEditWindow.xaml
+++ b/PortFolion/PortFolion/EditComponent/AccountEditWindow.xaml
@@ -12,7 +12,7 @@
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                  x:Name="editWindow"
-                 mc:Ignorable="d" SaveWindowPosition="False"
+                 mc:Ignorable="d" SaveWindowPosition="True"
                  GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
                  TitleCaps="False"
                  Icon="/Portfolion;component/PortFolion.ico"
