--- a/PortFolion/PortFolion/GraphComponent/GraphTab.xaml
+++ b/PortFolion/PortFolion/GraphComponent/GraphTab.xaml
@@ -31,7 +31,14 @@
                 </ObjectDataProvider.MethodParameters>
             </ObjectDataProvider>
             <cnv:PeriodToStringConverter x:Key="PeriodConverter"/>
-            
+
+            <ObjectDataProvider x:Key="DividePatternKey" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="vm:DividePattern"/>
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+            <cnv:DividePatternToStringConverter x:Key="DividePatternConverter"/>
+
             <!--<ObjectDataProvider x:Key="TransitionStatusKey" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
                 <ObjectDataProvider.MethodParameters>
                     <x:Type TypeName="vm:TransitionStatus"/>
@@ -90,6 +97,16 @@
                         <DockPanel>
                             <TextBlock DockPanel.Dock="Top" Text="分割レベル : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
                             <mah:NumericUpDown DockPanel.Dock="Right" Value="{Binding TargetLevel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Interval="1" HorizontalAlignment="Right"/>
+                        </DockPanel>
+                        <DockPanel>
+                            <TextBlock DockPanel.Dock="Top" Text="分割タイプ : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                            <ComboBox DockPanel.Dock="Right" ItemsSource="{Binding Source={StaticResource DividePatternKey}}" SelectedValue="{Binding Divide}" HorizontalAlignment="Right">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Converter={StaticResource DividePatternConverter}}"/>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
                         </DockPanel>
                         <DockPanel>
                             <TextBlock DockPanel.Dock="Top" Text="期間 : " VerticalAlignment="Center" HorizontalAlignment="Left"/>
@@ -191,11 +208,23 @@
                     </Button>-->
                 </DockPanel>
                 <lvc:PieChart Grid.Row="1" x:Name="Pie" Series="{Binding BrakeDown}" StartingRotationAngle="90" 
-                              MinHeight="200" MinWidth="200" Width="300" Height="280" LegendLocation="None" Margin="15,0,15,3">
+                              MinHeight="200" MinWidth="200" Width="300" Height="280" LegendLocation="None" Margin="15,0,15,3" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <lvc:PieChart.DataTooltip>
                         <lvc:DefaultTooltip Background="Black" Opacity="0.7" SelectionMode="SharedYInSeries" ShowSeries="False"/>
                     </lvc:PieChart.DataTooltip>
                 </lvc:PieChart>
+                <lvc:PieChart Grid.Row="1" x:Name="InnerPie" Series="{Binding BrakeDownInner}" StartingRotationAngle="90"
+                              MinHeight="20 " MinWidth="200" Width="200" Height="180" LegendLocation="None" Margin="15,0,15,3" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <lvc:PieChart.DataTooltip>
+                        <lvc:DefaultTooltip Background="Black" Opacity="0.7" SelectionMode="SharedYInSeries" ShowSeries="False"/>
+                    </lvc:PieChart.DataTooltip>
+                </lvc:PieChart>
+                <!--<lvc:PieChart Grid.Row="1" x:Name="InnerPie" Series="{Binding BrakeDown}" StartingRotationAngle="90"
+                              MinHeight="20 " MinWidth="200" Width="200" Height="180" LegendLocation="None" Margin="15,0,15,3" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <lvc:PieChart.DataTooltip>
+                        <lvc:DefaultTooltip Background="Black" Opacity="0.7" SelectionMode="SharedYInSeries" ShowSeries="False"/>
+                    </lvc:PieChart.DataTooltip>
+                </lvc:PieChart>-->
 
                 <ScrollViewer VerticalScrollBarVisibility="auto" Grid.Row="2" Margin="0,10,0,0">
                     <ItemsControl ItemsSource="{Binding BrakeDown.BrakeDownLegend}">
